Ignored db.sqlite3 again.

--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,4 @@ custom_users/migrations/0002_auto_20170401_0938.py
 dbwwinkel/templatetags/__pycache__/
 index.xml
 wwinkel/templates/
-!/db.sqlite3
+db.sqlite3
